# Linform

./: README.md
Linear/: ArraySequence.h  CMakeLists.txt  DynamicArray.h  Linear.h  LinkedList.h  ListSequence.h  Sequence.h  main.cpp
Linear/Tests/: CMakeLists.txt  DynamicArrayTests.cpp  LinearTests.cpp  LinkedListTests.cpp
